# llmchain-rs

./: .gitignore  Cargo.toml  Makefile  README.md  rust-toolchain.toml
.cargo/: audit.toml
examples/: Cargo.toml
examples/src/: example_document_qa.rs  example_embedding.rs  example_github_inspect.rs  example_github_pr_summary.rs  example_github_repo_loader.rs  example_markdown_loader.rs  example_prompt_template.rs  example_vector_store.rs  lib.rs
examples/src/kit/: mod.rs  repl.rs
export/: Cargo.toml
export/src/: lib.rs
llmchain/: Cargo.toml  README.md
llmchain-rs/: Cargo.toml
llmchain-rs/src/: lib.rs
llmchain-rs/src/common/: mod.rs  string.rs
llmchain-rs/src/embeddings/databend/: mod.rs
llmchain-rs/src/llms/azure_openai/: mod.rs
llmchain-rs/src/llms/databend/: databend.rs
llmchain-rs/src/llms/openai/: mod.rs
llmchain-rs/src/loaders/: document_path.rs  document_splitter.rs  documents.rs
llmchain-rs/src/loaders/directory/: mod.rs
llmchain-rs/src/loaders/disk/: local_disk.rs  mod.rs
llmchain-rs/src/loaders/github/: github_pr_splitter.rs
llmchain-rs/src/loaders/markdown/: markdown_splitter.rs
llmchain-rs/src/memory/: github_pr_summary.rs  summary.rs
llmchain-rs/src/prompts/: document_retrieval_prompt.rs
llmchain-rs/tests/it/: main.rs
llmchain-rs/tests/it/embeddings/: mod.rs
llmchain-rs/tests/it/llms/databend/: databend.rs
llmchain-rs/tests/it/loaders/directory/: directory_loader.rs  directory_splitter.rs  mod.rs
llmchain-rs/tests/it/loaders/github/: github_pr_loader.rs  github_pr_splitter.rs
llmchain-rs/tests/it/loaders/markdown/: markdown_loader.rs  markdown_splitter.rs  mod.rs
llmchain-rs/tests/it/loaders/text/: text_loader.rs  text_splitter.rs
llmchain-rs/tests/it/prompts/: document_retrieval_prompt.rs
llmchain-rs/tests/testdata/github/: github_pr_loader.golden
llmchain-rs/tests/testdata/loaders/directory/: directory_loader.golden
llmchain-rs/tests/testdata/loaders/markdown/: copy_md_loader.golden
llmchain-rs/tests/testdata/markdown/: copy_md_splitter_chunk_100.golden
llmchain-rs/tests/testdata/prompts/: text_to_sql_prompt.golden
llmchain-rs/tests/testdata/text/: example_txt_splitter_default.golden
llmchain/common/: Cargo.toml
llmchain/common/src/: lib.rs
llmchain/common/tests/it/: main.rs  string.rs  token.rs
llmchain/embeddings/: Cargo.toml
llmchain/embeddings/src/: embedding.rs  lib.rs
llmchain/embeddings/src/databend/: databend.rs
llmchain/embeddings/src/openai/: openai.rs
llmchain/embeddings/tests/it/: main.rs
llmchain/embeddings/tests/it/databend/: databend.rs  mod.rs
llmchain/embeddings/tests/it/openai/: openai.rs
llmchain/llms/: Cargo.toml
llmchain/llms/src/: lib.rs  llm.rs
llmchain/llms/src/azure_openai/: azure_openai.rs
llmchain/llms/src/databend/: databend.rs
llmchain/llms/src/databendcloud/: databendcloud.rs  mod.rs
llmchain/llms/src/openai/: config.rs  mod.rs  openai.rs
llmchain/llms/tests/it/: main.rs
llmchain/llms/tests/it/azure_openai/: azure_openai.rs  mod.rs
llmchain/llms/tests/it/databend/: databend.rs
llmchain/loaders/: Cargo.toml
llmchain/loaders/src/: document.rs  document_loader.rs  document_path.rs  document_splitter.rs  documents.rs  lib.rs  splitter.rs  text_splitter.rs
llmchain/loaders/src/directory/: directory_loader.rs
llmchain/loaders/src/disk/: disk.rs  local_disk.rs  mod.rs  remote_disk.rs
llmchain/loaders/src/github/: github_code_splitter.rs  github_pr_loader.rs  github_pr_splitter.rs  github_repo_loader.rs  mod.rs
llmchain/loaders/src/markdown/: markdown.rs  markdown_loader.rs  markdown_splitter.rs  mod.rs
llmchain/loaders/src/pdf/: mod.rs  pdf_loader.rs  pdf_splitter.rs
llmchain/loaders/src/text/: mod.rs  text_loader.rs  text_splitter.rs
llmchain/loaders/tests/it/: document_splitter.rs  main.rs  splitter.rs
llmchain/memory/: Cargo.toml
llmchain/memory/src/: github_pr_summary.rs  lib.rs  summary.rs
llmchain/prompts/: Cargo.toml
llmchain/prompts/src/: document_retrieval_prompt.rs  github_pr_summary_prompt.rs  lib.rs  prompt.rs  text_to_sql_prompt.rs
llmchain/prompts/tests/it/: document_retrieval_prompt.rs  main.rs  prompt_template.rs  text_to_sql_prompt.rs
llmchain/prompts/tests/testdata/: document_retrieval_prompt.golden  prompt_template.golden  text_to_sql_prompt.golden
llmchain/src/: lib.rs
llmchain/src/common/: token.rs
llmchain/src/embeddings/: embedding.rs  mod.rs
llmchain/src/embeddings/databend/: databend.rs
llmchain/src/embeddings/openai/: mod.rs  openai.rs
llmchain/src/llms/: llm.rs  mod.rs
llmchain/src/llms/azure_openai/: azure_openai.rs
llmchain/src/llms/databend/: databend.rs  mod.rs
llmchain/src/llms/openai/: mod.rs  openai.rs
llmchain/src/loaders/: document.rs  mod.rs
llmchain/src/loaders/directory/: directory_loader.rs
llmchain/src/loaders/disk/: disk.rs  remote_disk.rs
llmchain/src/loaders/github/: github_pr_loader.rs  mod.rs
llmchain/src/loaders/markdown/: markdown_loader.rs  markdown_splitter.rs  mod.rs
llmchain/src/loaders/text/: text_loader.rs  text_splitter.rs
llmchain/src/models/: mod.rs  model.rs
llmchain/src/models/huggingface/: mod.rs  model.rs  model_type.rs
llmchain/src/prompts/: document_retrieval_prompt.rs  github_pr_summary_prompt.rs  mod.rs
llmchain/src/vector_stores/: vector_store.rs
llmchain/src/vector_stores/databend/: databend.rs
llmchain/test_kits/: Cargo.toml
llmchain/test_kits/src/: kit.rs  lib.rs  repl.rs
llmchain/tests/it/: main.rs
llmchain/tests/it/common/: mod.rs  string.rs  token.rs
llmchain/tests/it/llms/: mod.rs
llmchain/tests/it/models/: mod.rs
llmchain/tests/it/prompts/: mod.rs  prompt_template.rs  text_to_sql_prompt.rs
llmchain/tests/it/vector_stores/: mod.rs
llmchain/tests/testdata/prompts/: prompt_template.golden
llmchain/transformers/: Cargo.toml
llmchain/transformers/src/: lib.rs  transformer.rs
llmchain/vector_stores/: Cargo.toml
llmchain/vector_stores/src/: lib.rs  vector_store.rs
llmchain/vector_stores/src/databend/: databend.rs  mod.rs
llmchain/vector_stores/tests/it/: main.rs
(+60 files in other folders)
