[package]
name = "llmchain-examples"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "A Rust framework for large language models, inspired by LangChain"
categories = ["LLMs"]
keywords = ["LLMs"]

[[bin]]
name = "embedding_example"
path = "src/example_embedding.rs"
doctest = false
test = false

[[bin]]
name = "example_markdown_loader"
path = "src/example_markdown_loader.rs"
doctest = false
test = false

[[bin]]
name = "example_prompt_template"
path = "src/example_prompt_template.rs"
doctest = false
test = false

[[bin]]
name = "example_vector_store"
path = "src/example_vector_store.rs"
doctest = false
test = false

[[bin]]
name = "example_document_qa"
path = "src/example_document_qa.rs"
doctest = false
test = false

[[bin]]
name = "example_github_repo_loader"
path = "src/example_github_repo_loader.rs"
doctest = false
test = false

[[bin]]
name = "example_github_pr_summary"
path = "src/example_github_pr_summary.rs"
doctest = false
test = false

[dependencies]
anyhow = "1.0.*"
colored = "2.0.0"
env_logger = "0.10.0"
llmchain = { path = "../llmchain" }
log = "0.4.17"
rustyline = "12.0.0"
tokio = { version = "1.28.0", features = ["full"] }
url = "2.4.0"

[dev-dependencies]
