[package]
name = "llmchain"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "A Rust framework for large language models, inspired by LangChain"
categories = ["ai"]
keywords = ["ai"]

[dependencies]
anyhow = "1.0.*"
tiktoken-rs = "0.5.0"

[dev-dependencies]
goldenfile = "1.4"
