[package]
name = "llmchain"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "A Rust framework for large language models, inspired by LangChain"
categories = ["ai"]
keywords = ["ai"]

[dependencies]
anyhow = "1.0.*"
tiktoken-rs = "0.5.0"
async-trait = { workspace = true }

env_logger = "0.10.0"
futures = "0.3.*"
glob = "0.3.1"
git2 = "0.17.2"
log = "0.4.17"
databend-driver = "0.2.23"
serde_json = "1.0.95"
tokio-stream = "0.1.12"
octocrab = "0.24.0"
async-openai = "0.12.0"
opendal = "0.33.2"
parking_lot = "0.12.1"
patch = "0.7.0"
rayon = "1.7.0"
regex = "1.8.1"
tokio = { version = "1.28.0", features = ["full"]}
md5 = "0.7.0"
uuid = "1.3.3"


[dev-dependencies]
goldenfile = "1.4"
