[package]
name = "llmchain-embeddings"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "A Rust framework for large language models, inspired by LangChain"
categories = ["LLMs"]
keywords = ["LLMs"]

[dependencies]
llmchain-loaders = { path = "../loaders" }
llmchain-llms = { path = "../llms" }

async-trait = "0.1.68"
anyhow = "1.0.58"
tokio = { version = "1.28.0", features = ["full"]}

[dev-dependencies]
goldenfile = "1.4"
