[package]
name = "llmchain-embeddings"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "A Rust framework for large language models, inspired by LangChain"
categories = ["LLMs"]
keywords = ["LLMs"]

[dependencies]
llmchain-loaders = { path = "../loaders" }
llmchain-llms = { path = "../llms" }

anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
goldenfile = "1.4"
