[package]
name = "llmchain-llms"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "A Rust framework for large language models, inspired by LangChain"
categories = ["LLMs"]
keywords = ["LLMs"]

[dependencies]
llmchain-common = { path = "../common" }

anyhow = { workspace = true }
async-trait = { workspace = true }
databend-driver = { workspace = true }
serde_json = "1.0.96"
tokio = { workspace = true }
tokio-stream = "0.1.12"

async-openai = { git = "https://github.com/64bit/async-openai", rev = "17e097eecf79c0919100477650163709c833b3fe"}

[dev-dependencies]
goldenfile = "1.4"
