[package]
name = "llmchain-llms"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "A Rust framework for large language models, inspired by LangChain"
categories = ["LLMs"]
keywords = ["LLMs"]

[dependencies]
llmchain-common = { path = "../common" }

anyhow = { workspace = true }
async-openai = "0.12.0"
async-trait = { workspace = true }
databend-driver = { workspace = true }
log = { workspace = true }
serde_json = "1.0.95"
tokio = { workspace = true }
tokio-stream = "0.1.12"
parking_lot = "0.12.1"

[dev-dependencies]
goldenfile = "1.4"
