[package]
name = "llmchain-loaders"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "A Rust framework for large language models, inspired by LangChain"
categories = ["LLM"]
keywords = ["LLM"]

[dependencies]
anyhow = { workspace = true }

glob-match = "0.2.1"
opendal = "0.33.2"
rayon = "1.7.0"
regex = "1.8.1"
md5 = "0.7.0"

[dev-dependencies]
goldenfile = "1.4"
