[package]
name = "llmchain-loaders"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "A Rust framework for large language models, inspired by LangChain"
categories = ["LLM"]
keywords = ["LLM"]

[dependencies]
llmchain-common = { path = "../common" }

async-trait = { workspace = true }
anyhow = { workspace = true }

futures = {workspace = true }
glob = "0.3.1"
git2 = "0.17.2"
log = { workspace = true }
octocrab = "0.24.0"
opendal = "0.33.2"
parking_lot = "0.12.1"
patch = "0.7.0"
rayon = "1.7.0"
regex = "1.8.1"
tokio = { workspace = true }
md5 = "0.7.0"
uuid = "1.3.3"

[dev-dependencies]
goldenfile = "1.4"
env_logger = "*"
