[package]
name = "llmchain-memory"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "A Rust framework for large language models, inspired by LangChain"
categories = ["LLM"]
keywords = ["LLM"]

[dependencies]
llmchain-llms = { path = "../llms" }
llmchain-loaders = { path = "../loaders" }
llmchain-prompts = { path = "../prompts" }

anyhow = { workspace = true }
async-trait = { workspace = true }
parking_lot = "0.12.1"

[dev-dependencies]
goldenfile = "1.4"
