[package]
name = "llmchain-test-kits"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "A Rust framework for large language models, inspired by LangChain"
categories = ["LLMs"]
keywords = ["LLMs"]

[dependencies]
anyhow = { workspace = true }
goldenfile = "1.4"

[dev-dependencies]
env_logger = "*"
