[package]
name = "llmchain-vector-stores"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "A Rust framework for large language models, inspired by LangChain"
categories = ["LLMs"]
keywords = ["LLMs"]

[dependencies]
llmchain-loaders = { path = "../loaders" }
llmchain-embeddings = { path = "../embeddings" }

async-trait = "0.1.68"
anyhow = "1.0.58"
databend-driver = "0.2.22"
tokio = { version = "1.28.0", features = ["full"]}
uuid = "1.3.3"

[dev-dependencies]
goldenfile = "1.4"
