[package]
name = "llmchain-vector-stores"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "A Rust framework for large language models, inspired by LangChain"
categories = ["LLMs"]
keywords = ["LLMs"]

[dependencies]
llmchain-common = { path = "../common" }
llmchain-loaders = { path = "../loaders" }
llmchain-embeddings = { path = "../embeddings" }

anyhow = { workspace = true }
async-trait = { workspace = true }
databend-driver = { workspace = true }
tokio = { workspace = true }

futures-util = "0.3.28"
uuid = "1.3.3"

[dev-dependencies]
goldenfile = "1.4"
